# XBlock

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  MANIFEST.in  Makefile  NOTICE.txt  README.md  README.rst  catalog-info.yaml  codecov.yml  conftest.py  django_requirements.txt  local-requirements.txt  manage.py  mypy.ini  openedx.yaml  pylintrc  pylintrc_tweaks  pyproject.toml  requirements.txt  runner.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: add-depr-ticket-to-depr-board.yml  ci.yml  pypi-publish.yml  release.yml  upgrade-python-requirements.yml
acid/: acid.py  setup.py
acid/acid/: __init__.py  acid.py
chat/: chat.py  setup.py
chat/templates/: chat.html  chat.js
debugger/: blocks.py  proxy.py  request.py  runtime.py  scenarios.py  settings.py  setup.py  urls.py  util.py  views.py  wsgi.py
debugger/templates/: block.html  index.html  module.html
debugger/test/: test_scenarios.py
demo_xblocks/: README.rst  setup.py
demo_xblocks/demo_xblocks/: content.py  problem.py  structure.py  view_counter.py
doc/: Makefile  concepts.rst  conf.py  exceptions.rst  fields.rst  fragment.rst  getting_started.rst  index.rst  requirements.txt  runtime.rst  structure.rst  tutorial.rst  xblock.rst  xblockapi.rst
doc/api/: exceptions.rst  fields.rst  fragment.rst  runtime.rst  xblock.rst
doc/guide/: fragment.rst  javascript.rst  runtimes.rst  xblock.rst
docs/: Makefile  conf.py  docs_settings.py  fields.rst  fragments.rst  index.rst  introduction.rst  links.rst  plugins.rst  requirements.txt  runtime.rst  xblock.rst
docs/decisions/: 0001-service-entry-points.rst
docs/xblock-tutorial/: conf.py  glossary.rst  index.rst  introduction.rst
docs/xblock-utils/: index.rst  settings-and-theme-support.rst
jdblock/: jdblocks.py  setup.py
jdblock/content/: arboretum.js  random-arboretum.html
jdmodule/: jdmodules.py  setup.py
jdmodule/JDModules.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
jdmodule/content/: random-arboretum.css
lab/: schema.py
prototype/: README.rst  cookiecutter.json
prototype/{{cookiecutter.short_name}}/: setup.py
remote/: urls.py  views.py
requirements/: base.in  base.txt  ci.in  ci.txt  constraints.txt  dev.in  dev.txt  django.in  django.txt  doc.in  doc.txt  pip-tools.in  pip-tools.txt  pip.txt  test.in  test.txt  travis.in  travis.txt
script/: cibuild  coverage  max_pylint_violations  pre-push  quality  startnew.py
thumbs/: setup.py  thumbs.py
thumbs/static/: README.md  thumbs.js
thumbs/thumbs/: __init__.py  thumbs.py
web_fragments/: __init__.py  apps.py  fragment.py  views.py
web_fragments/examples/: urls.py  views.py
web_fragments/test_utils/: __init__.py
web_fragments/tests/: test_fragment.py  test_views.py
workbench/: __init__.py  admin.py  blocks.py  models.py  request.py  runtime.py  scenarios.py  settings.py  setup.py  urls.py  util.py  views.py  wsgi.py
workbench/templates/: block.html  blockview.html  index.html
workbench/test/: selenium_test.py  test_problems.py  test_runtime.py  test_scenarios.py  test_thumbs.py  test_views.py
xblock/: __init__.py  _version.py  cds_init_args_mixin.py  completable.py  content.py  core.py  exceptions.py  field_data.py  fields.py  fragment.py  internal.py  mixins.py  models.py  namespaces.py  parse.py  plugin.py  problem.py  query.py  run_script.py  runtime.py  scorable.py  setup.py  slider.py  static.py  structure.py  thumbs.py  util.py  validation.py  view_counter.py  widget.py  xml.py  xmodule_utils.py
xblock/django/: __init__.py  request.py
xblock/reference/: README.md  __init__.py  course_service.py  plugins.py  user_service.py
xblock/templates/: problem.html  sequence.html  vertical.html
xblock/test/: __init__.py  settings.py  test_asides.py  test_completable.py  test_core.py  test_core_capabilities.py  test_course_service.py  test_field_data.py  test_fields.py  test_fields_api.py  test_fragment.py  test_internal.py  test_json_conversion.py  test_mixins.py  test_model_types.py  test_namespaces.py  test_parsing.py  test_plugin.py  test_plugin_services.py  test_problem.py  test_progress.py  test_runtime.py  test_scorable.py  test_shared_fields.py  test_test_tools.py  test_timedelta.py  test_user_service.py  test_validation.py  test_view_counter.py  test_xml.py  tools.py  toy_runtime.py
xblock/utils/: helpers.py  publish_event.py  resources.py  settings.py  studio_editable.py
xblock_debugger/: runtime.py  scenarios.py  settings.py  urls.py  views.py  wsgi.py
xmodule/: core.py  plugin.py  problem.py  setup.py  widget.py
xmoduledebugger/: settings.py  setup.py  urls.py  views.py  wsgi.py
xmoduledebugger/templates/: index.html  module.html  upvotes.html  (+1 more)
(+112 files in other folders)
